[gd_scene load_steps=7 format=2]

[ext_resource path="res://components/MenuFrog.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ninja-frog/body-head-frog.png" type="Texture" id=2]
[ext_resource path="res://assets/backgrounds/shadow.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/menu/padlock.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite/HeadPivot/HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite/HeadPivot/HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[node name="MenuFrog" type="Node2D"]
position = Vector2( 313, 133 )
scale = Vector2( 10, 10 )
script = ExtResource( 1 )

[node name="ShadowPivot" type="Node2D" parent="."]
position = Vector2( 0, 16.5 )

[node name="Shadow" type="Sprite" parent="ShadowPivot"]
modulate = Color( 1, 1, 1, 0.262745 )
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 3 )

[node name="BodySprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 11
vframes = 2
region_rect = Rect2( 0, 22.0692, 30.543, 10.5173 )

[node name="HeadPivot" type="Node2D" parent="BodySprite"]
position = Vector2( 0, -0.5 )

[node name="HeadSprite" type="Sprite" parent="BodySprite/HeadPivot"]
texture = ExtResource( 2 )
hframes = 11
vframes = 2
frame = 11
region_rect = Rect2( 0, 0, 28.355, 23.108 )

[node name="LockSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0.600037, 3 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 1 )
